--- a/Allfiles/Mod03/Labfiles/Starter/Exercise 1/GradesPrototype/MainWindow.xaml
+++ b/Allfiles/Mod03/Labfiles/Starter/Exercise 1/GradesPrototype/MainWindow.xaml
@@ -32,7 +32,7 @@
                 <y:LogonPage x:Name="logonPage" LogonSuccess="Logon_Success" Visibility="Collapsed" />
                 
                 <!-- TODO: Exercise 1: Task 5c: Catch the StudentSelected event and call the studentsPage_StudentSelected event handler-->
-                <y:StudentsPage x:Name="studentsPage" Visibility="Collapsed" />
+                <y:StudentsPage x:Name="studentsPage" StudentSelected="studentsPage_StudentSelected" Visibility="Collapsed" />
                 
                 <y:StudentProfile x:Name="studentProfile" Back="studentPage_Back" Visibility="Collapsed" />
                 <!-- CONTENT -->
